<resources>
    <string name="name_app">Duvit!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="tareas">Tareas</string>
    <string name="proyectos">Proyectos</string>
    <string name="lista_de_tareas">Lista de tareas</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="reuniones">Reuniones</string>
    <string name="configuraci_n">Configuración</string>
    <string name="jugar">Jugar</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="estad_sticas_de_desempe_o">Estadísticas de desempeño</string>
    <string name="sistema_de_puntaci_n">Sistema de puntación</string>
    <string name="duvit_logo">Duvit logo</string>
    <string name="cargando_ubicaci_n">Cargando ubicación...</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>

</resources>
