<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/duvit_logo"
            android:src="@drawable/duvit_icono" />

        <TextView
            android:id="@+id/tvMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cargando_ubicaci_n"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/color777"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:hint="@string/contrase_a"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/color777"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEntrar"
            style="@style/UIKitButton.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/duvit_degradado_bg"
            android:padding="8dp"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>